using ReactiveUI;

namespace AccountManager.App.Avalonia.ViewModels;

public class ViewModelBase : ReactiveObject
{
}
