namespace AccountManager.Models;

public interface IModel
{
}
