namespace AccountManager.Models;

public class Role : IModel
{
    public int RoleId { get; set; }
    public string Name { get; set; }
}
